# algorithms_and_data_structures

./: pyproject.toml
algorithms/: selection_sort.py
algorithms/searching/: binary_search.py
algorithms/sorting/: bubble_sort.py
data_structures/: linked_list.py
data_structures/array_and_string/: maximum_value.py  merge_two_arrays.py  minimum_value.py  palindrome_two_pointer.py
data_structures/linked_list/: append.py  bubble.py  get.py  insert.py  merge.py  remove.py  reverse.py  swap.py  two_pointer.py
